# Sinabro

./: .gitignore  LICENSE  MNEMOS_PR_PROMPT.txt  README.md  SINABRO_NAITE_TECHNICAL_REPORT_EN.md  SINABRO_NAITE_WHITEPAPER.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  remote.rs
prototype/: Cargo.toml  deny.toml  rust-toolchain.toml
prototype/.cargo/: audit.toml
prototype/chain/: .gitignore  README.md  deploy_and_anchor.sh  foundry.toml
prototype/chain-inft/: .gitignore  README.md  foundry.toml
prototype/chain-inft/golden/: mint_calldata.hex  mint_golden.py
prototype/chain-inft/script/: DeployAndMint.s.sol
prototype/chain-inft/src/: StubVerifier.sol
prototype/chain-inft/test/: SinabroExpertMint.t.sol
prototype/chain/fixtures/verified_pattern/: Move.toml
prototype/chain/golden/: anchor_golden.py
prototype/chain/script/: Deploy.s.sol
prototype/chain/src/: PatternRegistry.sol
prototype/chain/test/: PatternRegistry.t.sol
prototype/crates/a-core/: Cargo.toml
prototype/crates/a-core/src/: config.rs  error.rs  lib.rs  logging.rs  runtime.rs  stage_c_env.rs  stage_c_mainnet_config.rs  stage_c_sponsor_mode.rs  trace.rs
prototype/crates/b-memory/: Cargo.toml
prototype/crates/b-memory/benches/: chunk_codec.rs  chunk_digest.rs  chunk_schema.rs  stage_b_blob_id.rs  stage_b_replay_transcript.rs  store.rs
prototype/crates/b-memory/fuzz/: Cargo.toml
prototype/crates/b-memory/src/: audit_digest.rs  chunk.rs  chunk_chain.rs  chunk_codec.rs  chunk_digest.rs  chunk_schema.rs  chunk_signature.rs  content_policy.rs  lib.rs  network.rs  owner.rs  persist.rs  replay.rs  signed_chunk.rs  stage_b_attestation.rs  stage_b_blob_id.rs  stage_b_diag.rs  stage_b_get.rs  stage_b_handoff.rs  stage_b_http.rs  stage_b_idempotency.rs  stage_b_measure.rs  stage_b_policy.rs  stage_b_preflight.rs  stage_b_put.rs  stage_b_receipt.rs  stage_b_retry.rs  stage_b_seal_integration.rs  stage_b_walrus_endpoint.rs  stage_c_handoff.rs  stage_c_replay_import.rs  stage_c_synthetic_payload.rs  stage_c_walrus_measure.rs  store.rs  trace_link.rs
prototype/crates/b-memory/tests/: chunk_prop.rs  chunk_vectors.rs  signature_matrix.rs  stage_b_anchor_inputs.rs  stage_b_blob_id_oracle.rs  stage_b_failure_matrix.rs  stage_b_live_get_verify.rs  stage_b_live_put.rs  stage_b_live_replay.rs  stage_b_mock_transport.rs  stage_b_replay_matrix.rs
prototype/crates/c-walrus/: Cargo.toml
prototype/crates/c-walrus/benches/: codec.rs
prototype/crates/c-walrus/src/: aggregator.rs  blob_id.rs  blob_id_rs2.rs  codec.rs  lib.rs  publisher.rs  reqwest_transport.rs  stage_c_idempotency.rs  stage_c_mainnet_endpoint.rs  stage_c_mainnet_preflight.rs  stage_c_mainnet_verify.rs  stream.rs  wire.rs
prototype/crates/c-walrus/tests/: aggregator.rs  blob_id.rs  blob_id_rs2_oracle.rs  codec.rs  failure_matrix.rs  publisher.rs  reqwest_transport_offline.rs  stream.rs
prototype/crates/d-move/: Cargo.toml
prototype/crates/d-move/src/: lib.rs  sdk.rs  stage_b_call_builder.rs  stage_b_gas.rs  stage_b_types.rs  stage_c_add_chunk_gas.rs  stage_c_audit_gas.rs  stage_c_effect_delta.rs  stage_c_event_budget.rs  stage_c_gas_baseline.rs  stage_c_gas_compare.rs  stage_c_gas_trace.rs  stage_c_idempotency.rs  stage_c_package_lock.rs  stage_c_ptb_size.rs  types.rs
prototype/crates/d-move/tests/: sdk.rs  stage_b_bcs_vectors.rs  types.rs
prototype/crates/e-skill/: Cargo.toml  baseline.json
prototype/crates/e-skill/benches/: catalog_index.rs  package_verify.rs  wasm_tier2.rs
prototype/crates/e-skill/src/: anti_gaming.rs  author_check.rs  builtins.rs  bundle.rs  capability_diff.rs  catalog_cache.rs  catalog_card.rs  catalog_counters.rs  catalog_index.rs  chain_bindings.rs  community_import.rs  compat.rs  compat_solver.rs  eval.rs  install_plan.rs  install_receipt.rs  install_state.rs  lib.rs  manifest.rs  no_commerce.rs  package.rs  package_policy.rs  package_toml.rs  permission_preview.rs  progressive_load.rs  provenance.rs  ptb.rs  ranking.rs  recommend.rs  review_queue.rs  rollback.rs  search_query.rs  signature.rs  starter_pack.rs  try_before_use.rs  verify.rs
prototype/crates/e-skill/tests/: catalog_index_properties.rs  move_bcs_parity.rs  package_malicious.rs  package_properties.rs  starter_pack_smoke.rs  wasm_malicious.rs
prototype/crates/f-seal/: Cargo.toml
prototype/crates/f-seal/src/: capability.rs  lib.rs  ownership.rs  stage_b_envelope.rs  stage_b_stub.rs  stage_b_wording.rs
prototype/crates/f-seal/tests/: stage_b_seal_redteam.rs
prototype/crates/g-wallet/: Cargo.toml
prototype/crates/g-wallet/src/: keystore.rs  lib.rs  rotate.rs  sign_msg.rs  sign_tx.rs  stage_b_address.rs  stage_b_balance.rs  stage_b_config.rs  stage_b_keystore.rs  stage_b_rotate.rs  stage_b_secret.rs  stage_b_sign_message.rs  stage_b_sign_tx.rs  stage_b_submit.rs  stage_b_trace.rs  stage_c_gas_coin_lease.rs  stage_c_gas_effect.rs  stage_c_gas_policy.rs  stage_c_hot_wallet.rs  stage_c_multisig.rs  stage_c_multisig_proposal.rs  stage_c_no_single_key.rs  stage_c_signer_boundary.rs  stage_c_signer_envelope.rs  stage_c_sponsor_signer.rs  stage_c_timelock.rs  stage_c_wallet_topology.rs
prototype/crates/g-wallet/tests/: stage_b_wallet_redteam.rs
prototype/crates/i-cli/: Cargo.toml
prototype/crates/i-cli/src/: lib.rs  skill_card_contract.rs
prototype/crates/j-ux/: Cargo.toml
prototype/crates/j-ux/src/: lib.rs  redact.rs  slash.rs  (+3 more)
prototype/crates/k-devex/: Cargo.toml
prototype/crates/l-dataset/: Cargo.toml
prototype/crates/l-train/: Cargo.toml
prototype/crates/m-agent/: Cargo.toml
prototype/crates/mnemos-cli/: Cargo.toml
prototype/crates/n-sandbox/: Cargo.toml
prototype/crates/o-stage-c-e2e/: Cargo.toml
prototype/move/: DEPLOY_TESTNET.md  Move.toml  Published.toml
prototype/move/mnemos_skill_registry/: Move.toml  Published.toml
prototype/move/sources/: audit_log.move  memory_root.move  memory_root.spec.move
prototype/move/tests/: bcs_vectors.move  stage_b_negative_tests.move
prototype/sidecar/zerog-attestation/: .gitignore  README.md  package.json  verify.js
(+401 files in other folders)
