[package]
name = "mnemos-a-core"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false  # internal workspace crate; never published to crates.io (atom #194 deny-bans wildcard fix)

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
